# central_balancos_py

./: .gitignore  README.md  bundle.sh  central_balancoes_instrucoes.txt  config.json  data.yml  demonstracoes.xlsx  main.py  pyproject.toml
central_balancos_py/src/: constants.py  extract.py  main.py  pdfs.py
central_balancos_py/src/client/: error_handler.py  http.py
tests/: constants.py  extract_test.py  main_test.py  pdfs_test.py  util.py
tests/client/: error_handler_test.py  http_test.py
tests/data/: demonstracoes.xlsx  demonstracoes_filtered.xlsx
tests/support/: factory.py
